--- a/data/blog/tor-receives-support-grant.mdx
+++ b/data/blog/tor-receives-support-grant.mdx
@@ -45,8 +45,8 @@ instrumental in releasing substantial improvements to onion services, including
 an improved protection mechanism against DDoS attacks.  Strengthening this team
 will ensure that Tor continues to provide reliable, anonymous, and secure
 communication for a global user base, including those in heavily censored
-regions. This is particularly important for the Bitcoin ecosystem, as users
-expose themselves to various risks if they can't connect to the Bitcoin network
+regions. This is particularly important for the Bitcoin and nostr ecosystems, as
+users expose themselves to various risks if they can't connect to those networks
 in a private manner.
 
 > We believe everyone should be able to explore the internet with privacy.
