--- a/data/blog/tor-receives-support-grant.mdx
+++ b/data/blog/tor-receives-support-grant.mdx
@@ -60,7 +60,7 @@ the open-source foundations of Bitcoin, nostr, and related technologies.
 
 The generosity of our donors makes grants like this possible. To continue
 supporting important projects like Tor, please consider donating to our [General
-Fund](/funds/general).
+Fund](/funds/general):
 
 <center>
     <DonateToGeneralFundButton/>
