Link to official website

--- a/data/blog/tor-receives-support-grant.mdx
+++ b/data/blog/tor-receives-support-grant.mdx
@@ -9,8 +9,8 @@ summary: "OpenSats is supporting the Tor Project's efforts to enhance privacy on
 ---
 
 OpenSats is pleased to announce a support grant for [The Tor
-Project](https://gitlab.torproject.org/tpo/team), a nonprofit organization
-dedicated to privacy and internet freedom since 2006.
+Project](https://www.torproject.org/), a nonprofit organization dedicated to
+privacy and internet freedom since 2006.
 
 Our [mission](/mission) is to provide a sustainable ecosystem of funding for
 free and open-source contributors and projects, especially those that help
