Update title: Bitcoin -> Network

--- a/data/blog/tor-receives-support-grant.mdx
+++ b/data/blog/tor-receives-support-grant.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Strengthening Bitcoin’s Privacy with Tor"
+title: "Strengthening Network Privacy with Tor"
 date: '2024-08-28'
 tags: ['OpenSats', 'grants', 'bitcoin']
 draft: false
