Add em dash (—)

--- a/data/blog/alex-gleason-receives-lts-grant.mdx
+++ b/data/blog/alex-gleason-receives-lts-grant.mdx
@@ -39,7 +39,7 @@ With the support of this grant, Alex plans to:
 
 - **Grow the community** by migrating existing Soapbox servers, onboarding various
   nostr communities, and launching initiatives like
-  [Henhouse.social](https://henhouse.social/)---a nostr community for women.
+  [Henhouse.social](https://henhouse.social/)—a nostr community for women.
 
 - **Refine and expand Ditto** with bug fixes, UX enhancements, as well as
   performance and stability improvements.
