Edit the fediverse to lowercase

--- a/data/blog/alex-gleason-receives-lts-grant.mdx
+++ b/data/blog/alex-gleason-receives-lts-grant.mdx
@@ -21,7 +21,7 @@ conference](https://www.youtube.com/watch?v=iZyqVGHjDGo) in August 2024.
 Beyond Ditto, Alex has made substantial contributions through several other key
 projects, including the [Mostr
 Bridge](https://soapbox.pub/blog/mostr-fediverse-nostr-bridge/), which connects
-nostr with the [Fediverse](https://en.wikipedia.org/wiki/Fediverse);
+nostr with the [fediverse](https://en.wikipedia.org/wiki/Fediverse);
 [Soapbox](https://docs.soapbox.pub/soapbox/), an open-source, customizable, and
 self-hostable front-end for decentralized social networks;
 [Nostrify](https://gitlab.com/soapbox-pub/nostrify/-/blob/main/README.md), a
