Removed erroneous punctuation

--- a/data/blog/mike-dilger-receives-lts-grant.mdx
+++ b/data/blog/mike-dilger-receives-lts-grant.mdx
@@ -47,7 +47,7 @@ Gossip client, with a focus on implementing key features such as:
   ([NIP-56](https://github.com/nostr-protocol/nips/blob/master/56.md)/[NIP-32](https://github.com/nostr-protocol/nips/blob/master/32.md))
 
 > Never in my life has something so important fallen into my lap, and I feel
-> responsible to the future of humanity to get this right."
+> responsible to the future of humanity to get this right.
 >
 ><cite>-Mike Dilger</cite>
 
