Add grantee requested updates.

--- a/data/blog/mike-dilger-receives-lts-grant.mdx
+++ b/data/blog/mike-dilger-receives-lts-grant.mdx
@@ -13,9 +13,9 @@ contributor in the nostr ecosystem.
 
 Mike is known for being the lead developer of
 [Gossip](https://github.com/mikedilger/gossip?tab=readme-ov-file#), a nostr
-client designed to prioritize privacy and security by leveraging Tor and
-avoiding [common web stack
-vulnerabilities](https://owasp.org/www-project-top-ten/#).
+client designed to prioritize privacy and security by avoiding [common web stack
+vulnerabilities](https://owasp.org/www-project-top-ten/#) and leveraging rust
+language security.
 
 Gossip has become a reference implementation for the "[outbox
 model](https://mikedilger.com/gossip-model/)", a design that enables more
@@ -29,19 +29,12 @@ discussions](https://github.com/nostr-protocol/nips/issues?q=involves%3Amikedilg
 With the support of this LTS grant, Mike plans to continue his work on the
 Gossip client, with a focus on implementing key features such as:
 
-- Viewing reactions and zaps on user posts
+- Improving support for replying to various versions of replaceable events.
 
-- Improving support for replying to various versions of replaceable events
+- Adding [NIP-96](https://github.com/nostr-protocol/nips/blob/master/96.md) file
+  uploads.
 
-- Integrating of
-  [NIP-46](https://github.com/nostr-protocol/nips/blob/master/46.md) (nostr
-  connect) as a client
-
-- Adding bookmarks, relay global feed, and
-  [NIP-96](https://github.com/nostr-protocol/nips/blob/master/96.md) file
-  uploads
-
-- Implementing Blossom support, Web of Trust, and search at relay features
+- Implementing Blossom support, Web of Trust, and search at relay features.
 
 - Enhancing reporting and labeling capabilities
   ([NIP-56](https://github.com/nostr-protocol/nips/blob/master/56.md)/[NIP-32](https://github.com/nostr-protocol/nips/blob/master/32.md))
