--- a/data/blog/mike-dilger-receives-lts-grant.mdx
+++ b/data/blog/mike-dilger-receives-lts-grant.mdx
@@ -18,7 +18,7 @@ vulnerabilities](https://owasp.org/www-project-top-ten/#) and leveraging rust
 language security.
 
 Gossip has become a reference implementation for the "[outbox
-model](https://mikedilger.com/gossip-model/)", a design that enables more
+model](https://mikedilger.com/gossip-model/)," a design that enables more
 scalable message distribution across the nostr network. In addition to Gossip,
 Mike has contributed to several tools and libraries that support the nostr
 ecosystem, such as the [chorus relay](https://github.com/mikedilger/chorus),
