--- a/data/blog/mike-dilger-receives-lts-grant.mdx
+++ b/data/blog/mike-dilger-receives-lts-grant.mdx
@@ -20,7 +20,7 @@ language security.
 Gossip has become a reference implementation for the "[outbox
 model](https://mikedilger.com/gossip-model/)," a design that enables more
 scalable message distribution across the nostr network. In addition to Gossip,
-Mike has contributed to several tools and libraries that support the nostr
+Mike is known for his contributions to several tools and libraries that support the nostr
 ecosystem, such as the [chorus relay](https://github.com/mikedilger/chorus),
 [relay tester](https://github.com/mikedilger/relay-tester), and his active
 [participation in NIP
