--- a/data/blog/mike-dilger-receives-lts-grant.mdx
+++ b/data/blog/mike-dilger-receives-lts-grant.mdx
@@ -27,7 +27,7 @@ ecosystem, such as the [chorus relay](https://github.com/mikedilger/chorus),
 discussions](https://github.com/nostr-protocol/nips/issues?q=involves%3Amikedilger).
 
 With the support of this LTS grant, Mike plans to continue his work on the
-Gossip client, with a focus on implementing key features such as:
+Gossip client, focusing on:
 
 - Improving support for replying to various versions of replaceable events.
 
