--- a/data/blog/jon-atack-receives-lts-grant.mdx
+++ b/data/blog/jon-atack-receives-lts-grant.mdx
@@ -7,3 +7,46 @@ authors: ['arvin', 'dergigi']
 images: ['/static/images/blog/TODO.jpg']
 summary: "OpenSats Welcomes Jon Atack as an LTS Grantee."
 ---
+
+OpenSats proudly announces long-term support for [Jon
+Atack](https://jonatack.github.io/), a dedicated contributor to Bitcoin Core and
+Bitcoin Improvement Proposals (BIPs).
+
+Since 2019, Jon has been pivotal in strengthening [Bitcoin
+Core](https://github.com/bitcoin/bitcoin) through code reviews and ongoing
+maintenance. As a [BIPs](https://github.com/bitcoin/bips#) editor and
+maintainer, Jon helps ensure critical proposals, such as soft forks, are
+carefully reviewed to uphold the integrity of Bitcoin's consensus rules and
+security.
+
+This grant allows Jon to resume full-time contributions, focusing on:
+
+- Conducting in-depth reviews of Bitcoin Core changes and BIP proposals to
+  safeguard security and robustness.
+
+- Mentoring developers and guiding complex changes in Bitcoin's codebase.
+
+Jon is also receiving grants from [Maelstrom's Bitcoin Grant
+Program](https://maelstrom.fund/bitcoin-grant-program/), and [The Human Rights
+Foundation's Bitcoin Development Fund](https://hrf.org/devfund), allowing him to
+further focus on his vital work in Bitcoin development. Beyond the technical
+aspects, Jon hopes to pursue a long-term, evergreen role of help and service,
+with a measure of kindness, wisdom and forbearance.
+
+>My aim is to help improve Bitcoin for everyone, make it safer, easier to use,
+>and scale into the future.
+>
+><cite>—Jon Atack</cite>
+
+OpenSats strives to provide sustainable funding for the builders and maintainers
+of critical open-source infrastructure within the Bitcoin and nostr ecosystem.
+
+The OpenSats [Long-Term Support
+program](/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors)
+is made possible by the generosity of our donors. To continue supporting
+contributors like Jon, please consider donating to the [General
+Fund](/funds/general).
+
+<center>
+    <DonateToGeneralFundButton/>
+</center>
