--- a/data/blog/mike-dilger-receives-lts-grant.mdx
+++ b/data/blog/mike-dilger-receives-lts-grant.mdx
@@ -34,7 +34,7 @@ Gossip client, focusing on:
 - Adding [NIP-96](https://github.com/nostr-protocol/nips/blob/master/96.md) file
   uploads.
 
-- Implementing Blossom support, Web of Trust, and search functionality at relay level.
+- Implementing Blossom support, Web of Trust, and search functionality at the relay level.
 
 - Enhancing reporting and labeling capabilities
   ([NIP-56](https://github.com/nostr-protocol/nips/blob/master/56.md)/[NIP-32](https://github.com/nostr-protocol/nips/blob/master/32.md))
