--- a/data/blog/mike-dilger-receives-lts-grant.mdx
+++ b/data/blog/mike-dilger-receives-lts-grant.mdx
@@ -21,7 +21,7 @@ Gossip has become a reference implementation for the "[outbox
 model](https://mikedilger.com/gossip-model/)," a design that enables more
 scalable message distribution across the nostr network. In addition to Gossip,
 Mike is known for his contributions to several tools and libraries that support the nostr
-ecosystem, such as the [chorus relay](https://github.com/mikedilger/chorus),
+ecosystem, such as the [chorus relay](https://github.com/mikedilger/chorus) and
 [relay tester](https://github.com/mikedilger/relay-tester), as well as his active
 [participation in NIP
 discussions](https://github.com/nostr-protocol/nips/issues?q=involves%3Amikedilger).
