Incorporate feedback from Jason

--- a/data/blog/jason-donenfeld-lts-grant.mdx
+++ b/data/blog/jason-donenfeld-lts-grant.mdx
@@ -12,8 +12,8 @@ OpenSats is proud to provide long-term support for Jason Donenfeld, a pivotal
 figure in developing essential cryptographic and networking tools.
 
 Jason is the creator of [WireGuard](https://www.wireguard.com/), a highly secure
-VPN protocol, along with several [other projects](https://www.zx2c4.com/), and a
-key contributor to the [Linux kernel's random number generator
+VPN protocol, along with several [other projects](https://www.zx2c4.com/), and
+the primary author and maintainer of the [Linux kernel's random number generator
 (RNG)](https://git.zx2c4.com/linux-rng/about/), both of which play a critical
 role in the Bitcoin ecosystem.
 
