--- a/data/blog/jason-donenfeld-lts-grant.mdx
+++ b/data/blog/jason-donenfeld-lts-grant.mdx
@@ -36,9 +36,11 @@ foundations of Bitcoin and related technologies.
 
 Our [Long-Term Support
 program](/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors)
-is made possible by generous donors like you. If you would like to support the
-work of contributors like Jason and our [other LTS grantees](/tags/lts),
-consider donating to the General Fund:
+is made possible by generous donors like you. If you would like to join us in
+supporting Jason's work on WireGuard, consider [donating to
+WireGuard](https://www.wireguard.com/donations/) directly. If you'd like to help
+us support contributors like Jason via our [LTS program](/tags/lts), consider
+donating to the General Fund:
 
 <center>
     <DonateToGeneralFundButton/>
