--- a/data/blog/jason-donenfeld-lts-grant.mdx
+++ b/data/blog/jason-donenfeld-lts-grant.mdx
@@ -18,7 +18,7 @@ the primary author and maintainer of the [Linux kernel's random number generator
 role in the Bitcoin ecosystem.
 
 WireGuard is instrumental in securing communications between nodes and data
-centers; safeguarding Bitcoin's network integrity. The Linux kernel RNG, which
+centers, safeguarding Bitcoin's network integrity. The Linux kernel RNG, which
 Jason has significantly improved, is vital for generating the cryptographic keys
 that Bitcoin relies on, making his work indispensable to the security of Bitcoin
 and its related technologies.
