--- a/data/blog/jason-donenfeld-lts-grant.mdx
+++ b/data/blog/jason-donenfeld-lts-grant.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Long-Term Support For Jason Donenfeld"
 date: '2024-09-12'
-tags: ['OpenSats', 'grants', 'bitcoin', 'LTS', 'core']
+tags: ['OpenSats', 'grants', 'bitcoin', 'LTS']
 draft: false
 authors: ['arvin', 'dergigi', 'jamesob']
 images: ['/static/images/blog/46-Jason-Donenfeld.jpg']
