Add GitHub link

--- a/data/blog/jason-donenfeld-lts-grant.mdx
+++ b/data/blog/jason-donenfeld-lts-grant.mdx
@@ -8,8 +8,9 @@ images: ['/static/images/blog/46-Jason-Donenfeld.jpg']
 summary: "OpenSats Welcomes Jason Donenfeld as an LTS Grantee."
 ---
 
-OpenSats is proud to provide long-term support for Jason Donenfeld, a pivotal
-figure in developing essential cryptographic and networking tools.
+OpenSats is proud to provide long-term support for [Jason
+Donenfeld](https://github.com/zx2c4), a pivotal figure in developing essential
+cryptographic and networking tools.
 
 Jason is the creator of [WireGuard](https://www.wireguard.com/), a highly secure
 VPN protocol, along with several [other projects](https://www.zx2c4.com/), and
