--- a/data/blog/jon-atack-receives-lts-grant.mdx
+++ b/data/blog/jon-atack-receives-lts-grant.mdx
@@ -10,7 +10,7 @@ summary: "OpenSats Welcomes Jon Atack as an LTS Grantee."
 
 OpenSats proudly announces long-term support for [Jon
 Atack](https://jonatack.github.io/), a dedicated contributor to Bitcoin Core and
-Bitcoin Improvement Proposals (BIPs).
+the Bitcoin Improvement Proposals (BIPs).
 
 Since 2019, Jon has been pivotal in strengthening [Bitcoin
 Core](https://github.com/bitcoin/bitcoin) through code reviews and ongoing
