--- a/data/blog/jon-atack-receives-lts-grant.mdx
+++ b/data/blog/jon-atack-receives-lts-grant.mdx
@@ -13,7 +13,7 @@ Atack](https://jonatack.github.io/), a dedicated contributor to Bitcoin Core and
 the Bitcoin Improvement Proposals (BIPs).
 
 Since 2019, Jon has been pivotal in strengthening [Bitcoin
-Core](https://github.com/bitcoin/bitcoin) through code reviews and ongoing
+Core](https://github.com/bitcoin/bitcoin) through general code review and ongoing
 maintenance. As a [BIPs](https://github.com/bitcoin/bips#) editor and
 maintainer, Jon helps ensure critical proposals, such as soft forks, are
 carefully reviewed to uphold the integrity of Bitcoin's consensus rules and
