--- a/data/blog/jon-atack-receives-lts-grant.mdx
+++ b/data/blog/jon-atack-receives-lts-grant.mdx
@@ -15,7 +15,7 @@ the Bitcoin Improvement Proposals (BIPs).
 Since 2019, Jon has been pivotal in strengthening [Bitcoin
 Core](https://github.com/bitcoin/bitcoin) through general code review and ongoing
 maintenance. As a [BIPs](https://github.com/bitcoin/bips#) editor and
-maintainer, Jon helps ensure critical proposals, such as soft forks, are
+maintainer, Jon plans to help ensure critical proposals, such as soft forks, are
 carefully reviewed to uphold the integrity of Bitcoin's consensus rules and
 security.
 
