--- a/data/blog/jon-atack-receives-lts-grant.mdx
+++ b/data/blog/jon-atack-receives-lts-grant.mdx
@@ -22,7 +22,7 @@ security.
 This grant allows Jon to resume full-time contributions, focusing on:
 
 - Conducting in-depth reviews of Bitcoin Core changes and BIP proposals to
-  safeguard security and robustness.
+  safeguard decentralization, security and robustness.
 
 - Mentoring developers and guiding complex changes in Bitcoin's codebase.
 
