--- a/data/blog/jon-atack-receives-lts-grant.mdx
+++ b/data/blog/jon-atack-receives-lts-grant.mdx
@@ -26,9 +26,8 @@ This grant allows Jon to resume full-time contributions, focusing on:
 
 - Mentoring developers and guiding complex changes in Bitcoin's codebase.
 
-Jon is also receiving grants from [Maelstrom's Bitcoin Grant
-Program](https://maelstrom.fund/bitcoin-grant-program/), and [The Human Rights
-Foundation's Bitcoin Development Fund](https://hrf.org/devfund), allowing him to
+Jon is also a long-term grant from [Maelstrom's Bitcoin Grant
+Program](https://maelstrom.fund/bitcoin-grant-program/), allowing him to
 further focus on his vital work in Bitcoin development. Beyond the technical
 aspects, Jon hopes to pursue a long-term, evergreen role of help and service,
 with a measure of kindness, wisdom and forbearance.
