--- a/data/blog/jon-atack-receives-lts-grant.mdx
+++ b/data/blog/jon-atack-receives-lts-grant.mdx
@@ -30,7 +30,7 @@ Jon is also a long-term grant from [Maelstrom's Bitcoin Grant
 Program](https://maelstrom.fund/bitcoin-grant-program/), allowing him to
 further focus on his vital work in Bitcoin development. Beyond the technical
 aspects, Jon hopes to pursue a long-term, evergreen role of help and service,
-with a measure of kindness, wisdom and forbearance.
+ideally with a measure of kindness, wisdom and forbearance.
 
 >My aim is to help improve Bitcoin for everyone, make it safer, easier to use,
 >and scale into the future.
