--- a/data/blog/jon-atack-receives-lts-grant.mdx
+++ b/data/blog/jon-atack-receives-lts-grant.mdx
@@ -32,8 +32,11 @@ further focus on his vital work in Bitcoin development. Beyond the technical
 aspects, Jon hopes to pursue a long-term, evergreen role of help and service,
 ideally with a measure of kindness, wisdom and forbearance.
 
->My aim is to help improve Bitcoin for everyone, make it safer, easier to use,
->and scale into the future.
+>I'm concerned about decentralization, privacy, freedom and self-sovereignty.
+>Against a backdrop of increasing dystopia, control, censorship, surveillance,
+>conflict and oppression, Bitcoin is fundamental. It needs continued vigilance,
+>review, maintenance, and improved decentralization, robustness, privacy and
+>user experience.
 >
 ><cite>—Jon Atack</cite>
 
