--- a/data/blog/jon-atack-receives-lts-grant.mdx
+++ b/data/blog/jon-atack-receives-lts-grant.mdx
@@ -26,7 +26,7 @@ This grant allows Jon to resume full-time contributions, focusing on:
 
 - Mentoring developers and guiding complex changes in Bitcoin's codebase.
 
-Jon is also a long-term grant from [Maelstrom's Bitcoin Grant
+Jon is also receiving a long-term grant from [Maelstrom's Bitcoin Grant
 Program](https://maelstrom.fund/bitcoin-grant-program/), allowing him to
 further focus on his vital work in Bitcoin development. Beyond the technical
 aspects, Jon hopes to pursue a long-term, evergreen role of help and service,
