--- a/data/blog/7th-wave-of-nostr-grants.mdx
+++ b/data/blog/7th-wave-of-nostr-grants.mdx
@@ -7,3 +7,159 @@ authors: ['arvin', 'gigi']
 images: ['/static/images/blog/TODO.jpg']
 summary: "OpenSats is funding five more open-source projects in the nostr ecosystem."
 ---
+
+We are excited to announce our seventh wave of nostr grants, supporting a new
+cohort of projects driving the ecosystem forward in transformative ways.
+
+Nostr's evolution is not slowing down; it is expanding beyond social networking
+into secure messaging, IoT integrations, and enhanced developer tools.
+
+These projects represent the movement to expand our interaction with
+decentralized technologies, ultimately making them more accessible and secure.
+They embody the spirit of innovation that defines nostr's future, and we're
+proud to support the developers pushing these boundaries.
+
+Together, we're laying the foundation for a more open, decentralized internet
+that fosters genuine global creativity and collaboration.
+
+The future of nostr is brighter than ever, and with the continued support of its
+incredible community, we can't wait to see how these projects will help shape a
+more connected and resilient digital world.
+
+- [Nostr Arduino](#nostr-arduino)
+
+- [White Noise](#white-noise)
+
+- [futr](#futr)
+
+- [Notedeck](#notedeck)
+
+- [Keystache](#keystache)
+
+Our support for nostr is made possible by the generosity of our donors. If you
+would like to help us continue supporting the nostr ecosystem, consider making a
+donation to [The Nostr Fund](/funds/nostr).
+
+<center>
+    <DonateToNostrFundButton/>
+</center>
+
+Let's dive in and take a closer look at each project and how they align with our
+mission.
+
+---
+
+### Nostr Arduino
+
+Nostr Arduino is an open-source library that integrates the nostr protocol with
+[Arduino](https://www.arduino.cc/en/Guide/Introduction) microcontrollers,
+enabling embedded devices to send and receive nostr events. Led by [Black
+Coffee](https://github.com/blackcoffeexbt/), the project aims to provide
+Internet of Things (IoT) devices with a permissionless, distributed network
+without relying on centralized services or exposing them to spyware. Plans
+include refactoring the library for better memory stability, increasing test
+coverage, enhancing documentation, creating example projects, and promoting the
+library through media content. The team also intends to collaborate on IoT NIP
+use cases, make the hardware
+[NIP-46](https://github.com/nostr-protocol/nips/blob/master/46.md) remote signer
+production-ready, add NIP-46 support to web clients, enable remote device
+configuration via nostr, and explore eCash integration.
+
+Repository: [arduino-nostr](https://github.com/blackcoffeexbt/arduino-nostr),
+[hardware-nostr-connect-device](https://github.com/blackcoffeexbt/hardware-nostr-connect-device)  
+
+License: MIT
+
+### White Noise
+
+JeffG is developing [White Noise](https://github.com/erskingardner/whitenoise),
+a nostr-based messaging client focused on secure communication. It implements
+double ratchet encryption for direct messages, supports group messaging, and
+synchronizes conversations across multiple devices. Built on nostr's
+censorship-resistant backbone, White Noise aims to deliver a seamless user
+experience similar to Signal, but with the added benefits of open protocols and
+decentralized infrastructure, ensuring privacy and accessibility for users in
+the freedom tech space.
+
+In addition to White Noise, JeffG is rebuilding
+[Ostrich.work](https://ostrich.work/), a platform designed to connect
+individuals with job opportunities in the freedom tech sector. He is also
+[contributing to the
+NDK](https://github.com/nostr-dev-kit/ndk/commits?author=erskingardner) (Nostr
+Development Kit), enhancing its stability and usability for developers.
+
+Repository:
+[erskingardner/whitenoise](https://github.com/erskingardner/whitenoise)
+
+License: MIT
+
+### futr
+
+Futr is a decentralized nostr client written in
+[Haskell](https://www.haskell.org/) by [prolic](https://github.com/prolic),
+focusing on public and private groups
+([NIP-29](https://github.com/nostr-protocol/nips/blob/master/29.md)) and private
+direct messages
+([NIP-17](https://github.com/nostr-protocol/nips/blob/master/17.md)). The
+project positions itself more like Telegram than Twitter. It's a native app that
+doesn't rely on a browser engine and is designed to cross-compile to Linux,
+Windows, macOS, Android, and iOS. Plans include refactoring for better
+performance, improving the user interface (possibly switching to Qt),
+implementing group and private messaging, and integrating features like
+voice/video calls and Lightning Network zaps to enhance secure and decentralized
+communication.
+
+Repository: [futrnostr/futr](https://github.com/futrnostr/futr)
+
+License: MIT
+
+### Notedeck
+
+Notedeck is a multi-platform nostr client for Android and desktop, inspired by
+TweetDeck and developed by [kernelkind](https://github.com/kernelkind). It
+offers a fully modular dashboard with customizable columns, enabling users to
+manage multiple accounts simultaneously. Users can view different timelines,
+notifications, direct messages, and bookmarks from a unified interface,
+rearranging columns as desired. The mobile version provides a similar experience
+optimized for single-column viewing. Future development includes account
+management, improved UI navigation, modular column support, posting
+capabilities, and profile viewing.
+
+Repository: [damus-io/notedeck](https://github.com/damus-io/notedeck)
+
+License: MIT
+
+### Keystache
+
+Keystache is a desktop-native nostr signing application that offers a seamless
+single-sign-on experience and key management for desktop users, developed by
+[Tommy Volk](https://github.com/tvolk131). Similar to the Alby Chrome Extension
+but tailored for desktop environments, it provides a base layer for nostr
+desktop apps, eliminating the need for individual apps to manage private keys.
+Currently in alpha for [Apple
+Silicon](https://en.wikipedia.org/wiki/Apple_silicon) and supporting the
+[NIP-55](https://github.com/nostr-protocol/nips/blob/master/55.md) protocol for
+key management, Keystache aims to reach beta soon and version 1.0 by year's end.
+Plans include evolving into a portal for nostr with features like an app
+marketplace, Fedimint wallet integration, signing permissions, and local relay
+support, simplifying key management, and fostering nostr desktop application
+development.
+
+Repository: [nodetec/keystache](https://github.com/nodetec/keystache)
+
+License: MIT
+
+---
+
+We are proud to support these projects and look forward to their continuous
+contributions to the nostr ecosystem. We have more grants to announce soon and
+will provide funding for many more projects in the future. If you're working on
+a nostr project that is free and open-source, [don't hesitate to apply](/apply).
+
+Our support for nostr is made possible by donors like you. Please consider
+donating to [The Nostr Fund](/funds/nostr) to help us fund the ingenious
+developers building toward a better future.
+
+<center>
+    <DonateToNostrFundButton/>
+</center>
