--- a/data/blog/7th-wave-of-nostr-grants.mdx
+++ b/data/blog/7th-wave-of-nostr-grants.mdx
@@ -3,7 +3,7 @@ title: "Seventh Wave of Nostr Grants"
 date: '2024-09-18'
 tags: ['OpenSats', 'grants', 'nostr', 'wave']
 draft: false
-authors: ['arvin', 'gigi']
+authors: ['arvin', 'dergigi']
 images: ['/static/images/blog/TODO.jpg']
 summary: "OpenSats is funding five more open-source projects in the nostr ecosystem."
 ---
