Re-write introduction

--- a/data/blog/7th-wave-of-nostr-grants.mdx
+++ b/data/blog/7th-wave-of-nostr-grants.mdx
@@ -8,23 +8,18 @@ images: ['/static/images/blog/54-nostr-7th-wave.jpg']
 summary: "OpenSats is funding five more open-source projects in the nostr ecosystem."
 ---
 
-We are excited to announce our seventh wave of nostr grants, supporting a new
-cohort of projects driving the ecosystem forward in transformative ways.
+We are pleased to announce our seventh round of nostr grants, which will support
+a new group of projects that contribute to the growth of the overall ecosystem.
+Nostr is evolving, expanding its focus from pure social networking to include
+secure messaging and IoT integrations, among other things.
 
-Nostr's evolution is not slowing down; it is expanding beyond social networking
-into secure messaging, IoT integrations, and enhanced developer tools.
+Our goal is to contribute to the development of a more open and decentralized
+internet that promotes creativity and collaboration. We remain committed to
+supporting the developers behind these initiatives.
 
-These projects represent the movement to expand our interaction with
-decentralized technologies, ultimately making them more accessible and secure.
-They embody the spirit of innovation that defines nostr's future, and we're
-proud to support the developers pushing these boundaries.
-
-Together, we're laying the foundation for a more open, decentralized internet
-that fosters genuine global creativity and collaboration.
-
-The future of nostr is brighter than ever, and with the continued support of its
-incredible community, we can't wait to see how these projects will help shape a
-more connected and resilient digital world.
+With the continued support of the nostr community, we anticipate that these
+projects will play a significant role in creating a more connected, open, and
+resilient digital landscape.
 
 - [Nostr Arduino](#nostr-arduino)
 
