--- a/data/blog/7th-wave-of-nostr-grants.mdx
+++ b/data/blog/7th-wave-of-nostr-grants.mdx
@@ -10,8 +10,8 @@ summary: "OpenSats is funding five more open-source projects in the nostr ecosys
 
 We are pleased to announce our seventh round of nostr grants, which will support
 a new group of projects that contribute to the growth of the overall ecosystem.
-Nostr is evolving, expanding its focus from pure social networking to include
-secure messaging and IoT integrations, among other things.
+Nostr is evolving, with projects expanding their focus from pure social
+networking to include secure messaging and IoT integrations, among other things.
 
 Our goal is to contribute to the development of a more open and decentralized
 internet that promotes creativity and collaboration. We remain committed to
