Minor edits; move paragraphs down

--- a/data/blog/7th-wave-of-nostr-grants.mdx
+++ b/data/blog/7th-wave-of-nostr-grants.mdx
@@ -8,24 +8,27 @@ images: ['/static/images/blog/54-nostr-7th-wave.jpg']
 summary: "OpenSats is funding five more open-source projects in the nostr ecosystem."
 ---
 
-We are pleased to announce our seventh round of nostr grants, which will support
-a new group of projects that contribute to the growth of the overall ecosystem.
-Nostr is evolving, with projects expanding their focus from pure social
-networking to include secure messaging and IoT integrations, among other things.
+We are pleased to announce our seventh round of nostr grants, supporting a new
+group of projects that contribute to the growth of the overall ecosystem.  Nostr
+is evolving, with projects expanding their focus from pure social networking to
+secure messaging and payments, IoT integrations, trusted software distribution,
+and more.
 
-Our goal is to contribute to the development of a more open and decentralized
-internet that promotes creativity and collaboration. We remain committed to
-supporting the developers behind these initiatives.
-
-With the continued support of the nostr community, we anticipate that these
-projects will play a significant role in creating a more connected, open, and
-resilient digital landscape.
+The five projects of this funding wave are:
 
 - [Nostr Arduino](#nostr-arduino)
 - [White Noise](#white-noise)
 - [futr](#futr)
 - [Notedeck](#notedeck)
 - [Keystache](#keystache)
+
+With the continued support of the nostr community, we anticipate that these
+projects will play a significant role in creating a more connected, open, and
+resilient digital landscape.
+
+Our goal is to contribute to the development of a more open and decentralized
+internet that promotes creativity and collaboration. We remain committed to
+supporting the developers behind these initiatives.
 
 Our support for nostr is made possible by the generosity of our donors. If you
 would like to help us continue supporting the nostr ecosystem, consider making a
