--- a/data/blog/7th-wave-of-nostr-grants.mdx
+++ b/data/blog/7th-wave-of-nostr-grants.mdx
@@ -9,10 +9,10 @@ summary: "OpenSats is funding five more open-source projects in the nostr ecosys
 ---
 
 We are pleased to announce our seventh round of nostr grants, supporting a new
-group of projects that contribute to the growth of the overall ecosystem.  Nostr
-is evolving, with projects expanding their focus from pure social networking to
-secure messaging and payments, IoT integrations, trusted software distribution,
-and more.
+group of projects that contribute to the growth and innovation happening in this
+ecosystem. Nostr is evolving, with projects expanding their focus from pure
+social networking to secure messaging and payments, IoT integrations, trusted
+software distribution, and more.
 
 The five projects of this funding wave are:
 
