Link to /mission & remove Haskell link

--- a/data/blog/7th-wave-of-nostr-grants.mdx
+++ b/data/blog/7th-wave-of-nostr-grants.mdx
@@ -38,8 +38,8 @@ donation to [The Nostr Fund](/funds/nostr).
     <DonateToNostrFundButton/>
 </center>
 
-Let's dive in and take a closer look at each project and how they align with our
-mission.
+Let's dive in and take a closer look at each project and how they align with [our
+mission](/mission).
 
 ---
 
@@ -81,7 +81,7 @@ License: MIT
 ### futr
 
 Futr is a decentralized nostr client written in
-[Haskell](https://www.haskell.org/) by [prolic](https://github.com/prolic),
+Haskell by [prolic](https://github.com/prolic),
 focusing on public and private groups
 ([NIP-29](https://github.com/nostr-protocol/nips/blob/master/29.md)) and private
 direct messages
