--- a/data/blog/7th-wave-of-nostr-grants.mdx
+++ b/data/blog/7th-wave-of-nostr-grants.mdx
@@ -54,14 +54,15 @@ without relying on centralized services or exposing them to spyware. Plans
 include refactoring the library for better memory stability, increasing test
 coverage, enhancing documentation, creating example projects, and promoting the
 library through media content. The team also intends to collaborate on IoT NIP
-use cases, make the hardware
-[NIP-46](https://github.com/nostr-protocol/nips/blob/master/46.md) remote signer
-production-ready, add NIP-46 support to web clients, enable remote device
-configuration via nostr, and explore eCash integration.
+use cases, make the hardware [NIP-46] remote signer production-ready, add NIP-46
+support to web clients, enable remote device configuration via nostr, and
+explore eCash integration.
 
 Repository: [arduino-nostr](https://github.com/blackcoffeexbt/arduino-nostr),
 [hardware-nostr-connect-device](https://github.com/blackcoffeexbt/hardware-nostr-connect-device)  
-License: MIT  
+License: MIT
+
+[NIP-46]: https://github.com/nostr-protocol/nips/blob/master/46.md
 
 ### White Noise
 
@@ -80,22 +81,20 @@ License: MIT
 
 ### futr
 
-Futr is a decentralized nostr client written in
-Haskell by [prolic](https://github.com/prolic),
-focusing on public and private groups
-([NIP-29](https://github.com/nostr-protocol/nips/blob/master/29.md)) and private
-direct messages
-([NIP-17](https://github.com/nostr-protocol/nips/blob/master/17.md)). The
-project positions itself more like Telegram than Twitter. It's a native app that
-doesn't rely on a browser engine and is designed to cross-compile to Linux,
-Windows, macOS, Android, and iOS. Plans include refactoring for better
-performance, improving the user interface (possibly switching to Qt),
-implementing group and private messaging, and integrating features like
-voice/video calls and Lightning Network zaps to enhance secure and decentralized
-communication.
+Futr is a decentralized nostr client written in Haskell, focusing on public and
+private groups ([NIP-29]) and private direct messages ([NIP-17]). The project
+positions itself more like Telegram than Twitter. It's a native app that doesn't
+rely on a browser engine and is designed to cross-compile to Linux, Windows,
+macOS, Android, and iOS. Plans include refactoring for better performance,
+improving the user interface (possibly switching to Qt), implementing group and
+private messaging, and integrating features like voice/video calls and Lightning
+Network zaps to enhance secure and decentralized communication.
 
 Repository: [futrnostr/futr](https://github.com/futrnostr/futr)  
-License: MIT  
+License: MIT
+
+[NIP-29]: https://github.com/nostr-protocol/nips/blob/master/29.md
+[NIP-17]: https://github.com/nostr-protocol/nips/blob/master/17.md
 
 ### Notedeck
 
