--- a/data/blog/7th-wave-of-nostr-grants.mdx
+++ b/data/blog/7th-wave-of-nostr-grants.mdx
@@ -99,14 +99,13 @@ License: MIT
 ### Notedeck
 
 Notedeck is a multi-platform nostr client for Android and desktop, inspired by
-TweetDeck and developed by [kernelkind](https://github.com/kernelkind). It
-offers a fully modular dashboard with customizable columns, enabling users to
-manage multiple accounts simultaneously. Users can view different timelines,
-notifications, direct messages, and bookmarks from a unified interface,
-rearranging columns as desired. The mobile version provides a similar experience
-optimized for single-column viewing. Future development includes account
-management, improved UI navigation, modular column support, posting
-capabilities, and profile viewing.
+TweetDeck. It offers a fully modular dashboard with customizable columns,
+enabling users to manage multiple accounts simultaneously. Users can view
+different timelines, notifications, direct messages, and bookmarks from a
+unified interface, rearranging columns as desired. The mobile version provides a
+similar experience optimized for single-column viewing. Future development
+includes account management, improved UI navigation, modular column support,
+posting capabilities, and profile viewing.
 
 Repository: [damus-io/notedeck](https://github.com/damus-io/notedeck)  
 License: MIT  
