--- a/data/blog/7th-wave-of-nostr-grants.mdx
+++ b/data/blog/7th-wave-of-nostr-grants.mdx
@@ -113,21 +113,21 @@ License: MIT
 ### Keystache
 
 Keystache is a desktop-native nostr signing application that offers a seamless
-single-sign-on experience and key management for desktop users, developed by
-[Tommy Volk](https://github.com/tvolk131). Similar to the Alby Chrome Extension
-but tailored for desktop environments, it provides a base layer for nostr
-desktop apps, eliminating the need for individual apps to manage private keys.
-Currently in alpha for [Apple
-Silicon](https://en.wikipedia.org/wiki/Apple_silicon) and supporting the
-[NIP-55](https://github.com/nostr-protocol/nips/blob/master/55.md) protocol for
-key management, Keystache aims to reach beta soon and version 1.0 by year's end.
-Plans include evolving into a portal for nostr with features like an app
+single-sign-on experience and key management for desktop users.  Similar to the
+Alby Chrome Extension but tailored for desktop environments, it provides a base
+layer for nostr desktop apps, eliminating the need for individual apps to manage
+private keys.  Currently in alpha for [Apple
+Silicon](https://en.wikipedia.org/wiki/Apple_silicon) and supporting [NIP-55]
+for key management, Keystache aims to reach beta soon and version 1.0 by year's
+end.  Plans include evolving into a portal for nostr with features like an app
 marketplace, Fedimint wallet integration, signing permissions, and local relay
 support, simplifying key management, and fostering nostr desktop application
 development.
 
 Repository: [nodetec/keystache](https://github.com/nodetec/keystache)  
-License: MIT  
+License: MIT
+
+[NIP-55]: https://github.com/nostr-protocol/nips/blob/master/55.md
 
 ---
 
