Re-word & formatting

--- a/data/blog/7th-wave-of-nostr-grants.mdx
+++ b/data/blog/7th-wave-of-nostr-grants.mdx
@@ -113,13 +113,14 @@ License: MIT
 ### Keystache
 
 Keystache is a desktop-native nostr signing application that offers a seamless
-single-sign-on experience and key management for desktop users.  Similar to the
+single-sign-on experience and key management for desktop users. Similar to the
 Alby Chrome Extension but tailored for desktop environments, it provides a base
 layer for nostr desktop apps, eliminating the need for individual apps to manage
-private keys.  Currently in alpha for [Apple
+private keys. 
+Currently in alpha for [Apple
 Silicon](https://en.wikipedia.org/wiki/Apple_silicon) and supporting [NIP-55]
 for key management, Keystache aims to reach beta soon and version 1.0 by year's
-end.  Plans include evolving into a portal for nostr with features like an app
+end. Plans include evolving into a portal for nostr with features like an app
 marketplace, Fedimint wallet integration, signing permissions, and local relay
 support, simplifying key management, and fostering nostr desktop application
 development.
@@ -132,9 +133,8 @@ License: MIT
 ---
 
 We are proud to support these projects and look forward to their continuous
-contributions to the nostr ecosystem. We have more grants to announce soon and
-will provide funding for many more projects in the future. If you're working on
-a nostr project that is free and open-source, [don't hesitate to apply](/apply).
+contributions to the nostr ecosystem.  If you're working on a nostr project that
+is free and open-source, [don't hesitate to apply](/apply).
 
 Our support for nostr is made possible by donors like you. Please consider
 donating to [The Nostr Fund](/funds/nostr) to help us fund the ingenious
