--- a/data/blog/7th-wave-of-nostr-grants.mdx
+++ b/data/blog/7th-wave-of-nostr-grants.mdx
@@ -32,7 +32,7 @@ supporting the developers behind these initiatives.
 
 Our support for nostr is made possible by the generosity of our donors. If you
 would like to help us continue supporting the nostr ecosystem, consider making a
-donation to [The Nostr Fund](/funds/nostr).
+donation to [The Nostr Fund](/funds/nostr):
 
 <center>
     <DonateToNostrFundButton/>
@@ -137,8 +137,8 @@ contributions to the nostr ecosystem.  If you're working on a nostr project that
 is free and open-source, [don't hesitate to apply](/apply).
 
 Our support for nostr is made possible by donors like you. Please consider
-donating to [The Nostr Fund](/funds/nostr) to help us fund the ingenious
-developers building toward a better future.
+donating to _The Nostr Fund_ to help us fund the ingenious
+developers building toward a better future:
 
 <center>
     <DonateToNostrFundButton/>
