--- a/data/blog/7th-wave-of-nostr-grants.mdx
+++ b/data/blog/7th-wave-of-nostr-grants.mdx
@@ -88,7 +88,7 @@ rely on a browser engine and is designed to cross-compile to Linux, Windows,
 macOS, Android, and iOS. Plans include refactoring for better performance,
 improving the user interface (possibly switching to Qt), implementing group and
 private messaging, and integrating features like voice/video calls and Lightning
-Network zaps to enhance secure and decentralized communication.
+Network zaps with the aim of improving security and further decentralizing communications.
 
 Repository: [futrnostr/futr](https://github.com/futrnostr/futr)  
 License: MIT
