--- a/data/blog/seventh-wave-of-bitcoin-grants.mdx
+++ b/data/blog/seventh-wave-of-bitcoin-grants.mdx
@@ -84,7 +84,7 @@ enhanced security, and improved interoperability with the latest ecash and
 Lightning technologies. As a fully open-source wallet, Minibits plays an
 important role in advancing the [Cashu](https://cashu.space/) protocol by
 providing a fast cross-platform mobile wallet which will put Cashu's scalability
-and privacy claims to the test in real-world scenarios
+and privacy claims to the test in real-world scenarios.
 
 Repository:
 [minibits-cash/minibits_wallet](https://github.com/minibits-cash/minibits_wallet)  
