add bdk readme url
Co-authored-by: Bayer <55212954+Bayernatoor@users.noreply.github.com>

--- a/data/blog/seventh-wave-of-bitcoin-grants.mdx
+++ b/data/blog/seventh-wave-of-bitcoin-grants.mdx
@@ -110,7 +110,7 @@ License: MIT
 
 ### Cove
 
-Cove is a mobile wallet built with BDK. Designed for simplicity and
+Cove is a mobile wallet built with [BDK](https://github.com/bitcoindevkit/bdk/blob/master/README.md). Designed for simplicity and
 accessibility, it provides strong support for and integrates seamlessly with
 hardware signing devices, making it suitable for beginners and experienced users
 alike. The wallet includes features such as PSBT support via NFC, QR codes, and
