Edit to common noun
Co-authored-by: Jon Atack <jon@atack.com>

--- a/data/blog/seventh-wave-of-bitcoin-grants.mdx
+++ b/data/blog/seventh-wave-of-bitcoin-grants.mdx
@@ -97,7 +97,7 @@ that simplifies the integration of Discreet Log Contracts (DLCs) into Bitcoin
 applications, allowing developers to create financial contracts like futures and
 peer-to-peer bets without having to deal with the complexities of DLC logic
 directly. By providing libraries for wallet operations, DLC communication, data
-storage, and Oracle integration, dlc dev kit enables seamless application
+storage, and integration of oracles, dlc dev kit enables seamless application
 development. Future work includes launching a platform-agnostic DLC marketplace,
 implementing WASM and mobile bindings for broader accessibility, and integrating
 covenant support to improve the efficiency of DLCs. These enhancements aim to
